# FastAPI

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: create_db.py  database.py  main.py  models.py
conf/settings/: base.py
