[project]
name = "todolist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "mysql-connector-python>=9.2.0",
    "mysqlclient>=2.2.7",
    "passlib[bcrypt]>=1.7.4",
    "pymysql>=1.1.1",
    "python-jose>=3.3.0",
    "sqlalchemy>=2.0.38",
]
